--- a/src/style/form-fields.scss
+++ b/src/style/form-fields.scss
@@ -4,7 +4,6 @@
 
     & > * {
         padding-left: 20px;
-
     }
 
     &__label {
@@ -27,38 +26,40 @@
         width: 243px;
         border-radius: 20px;
         background-color: #00CB79;
+
         font-size: 16px;
         color: white;
-        
+
         &:focus {
             outline: none;
         }
     }
 
     &__gray-button {
-        background-color: #999;
+        background: #999;
         width: 137px;
     }
+
 }
 
 .form-button-long-gray {
     display: grid;
     grid-gap: 6.5px;
-
+    
     &__button {
         height: 38px;
         width: 243px;
         border-radius: 20px;
         background-color: #999;
+
         font-size: 16px;
         color: white;
-        
+
         &:focus {
             outline: none;
         }
     }
 
-    
     &__label {
         padding-left: 20px;
         font-size: 14px;
