--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -34,8 +34,11 @@ body {
 @import "account/purchase-history";
 @import "account/account-information";
 
+// CART
+@import "shop/shop-cart";
+@import "shop/cart-product";
+
 // SHOP
 @import "shop/shop";
 @import "shop/shop-search-bar";
 @import "shop/shop-product";
-@import "shop/shop-cart";
