--- a/src/style/shop/cart-product.scss
+++ b/src/style/shop/cart-product.scss
@@ -15,12 +15,16 @@
         grid-row: s/m;
         grid-column: title-s/title-e;
         align-self: start;
+
+        font-size: 18px;
+        font-family: 'Encode Sans Condensed';
+        color: #E6E6E6;
     }
 
     &__quantity {
         grid-row: m/e;
         grid-column: quantity-s/quantity-e;
-        .quantity-count {
+        .quantity__count {
             color: white !important;
         }
     }
@@ -29,6 +33,9 @@
         grid-row: m/e;
         grid-column: remove-s/remove-e;
         justify-self: start;
+
+        font-size: 14px;
+        text-decoration-line: underline;
     }
 
     &__price {
