--- a/src/style/shop/shop-cart.scss
+++ b/src/style/shop/shop-cart.scss
@@ -1,4 +1,6 @@
 .shop-cart {
+    transition: all .3s ease;
+
     display: grid;
     grid-template-rows: [tog-s] 40px [tog-e con-s] 1fr [con-e];
     grid-template-columns: [s] 1fr [e];
@@ -9,9 +11,7 @@
         grid-column: s/e;
         justify-self: end;
 
-        display: grid;
-        justify-items: center;
-        align-items: center;
+        z-index: 6;
     }
 
     &__content {
@@ -33,6 +33,10 @@
     border-radius: 25px 0 0 25px;
     height: 40px;
     width: 76px;
+
+    display: grid;
+    justify-items: center;
+    align-items: center;
 }
 
 .cart-content {
@@ -123,4 +127,8 @@
         font-weight: 600;
         color: white;
     }
+}
+
+.cart-hidden {
+    transform: translateX(520px);
 }
