--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -52,3 +52,7 @@ body {
 @import "order/review";
 @import "order/reviewForm";
 @import "order/reviewProduct";
+
+// INFO
+@import "information/payment";
+@import "information/shipping";
