layed out shipping form fields

--- a/src/style/information/shipping.scss
+++ b/src/style/information/shipping.scss
@@ -1,39 +1,63 @@
 .shipping {
-    &__form {
+    grid-column: content-s/content-e;
+    grid-row: s/e;
 
+    &__form {
+        display: grid;
+        grid-template-rows: [name-s] 64px [name-e] 35px [address-s] 64px [address-e city-s] 64px [city-e state-zip-s] 64px [state-zip-e] minmax(20px, 81px) [line-s] 26px [line-e buttons-s] 38px [buttons-e];
+        grid-template-columns: [back-s] 137px [back-e space-s] 40px [space-e use-this-address-s] 1fr [use-this-address-e] 1fr;
+        grid-row-gap: 15px;
     }
+
+    // transition: all .3s ease;
 }
 
 .shipping-form {
     &__name {
-
+        grid-row: name-s/name-e;
     }
 
     &__address {
-
+        grid-row: address-s/address-e;
     }
 
     &__city {
-
+        grid-row: city-s/city-e;
     }
 
-    &__state {
-
+    &__state,
+    &__zipcode {
+        grid-row: state-zip-s/state-zip-e;
+        grid-column: back-s;
+        input {
+            width: 20px;
+        }
     }
 
     &__zipcode {
-
+        transform: translateX(226px);
     }
 
     &__line {
-
+        grid-row: line-s/line-e;
+        grid-column: 1/-1;
+        margin-bottom: 24px;
+        border-top: 1px solid #CCC;
     }
     
     &__back {
-
+        grid-row: buttons-s/buttons-e;
+        grid-column: back-s/back-e;
     }
 
     &__use-this-address {
-        
+        grid-row: buttons-s/buttons-e;
+        grid-column: use-this-address-s/use-this-address-e;
     }
 }
+
+// @media only screen and (max-width: 600) {
+//     .shipping {
+//         transform: scale(0.75);
+//     }
+// }
